# machine-learning

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  cli.py  pyproject.toml  setup.cfg
.circleci/: config.yml
config/: dev-config.yml
data/ngrams/english/: 1-grams.txt  2-grams.txt  3-grams.txt  data.pkl
data/ngrams/french/: 1-grams.txt  2-grams.txt  3-grams.txt  data.pkl
logs/: log
src/: __init__.py  app.py  config.py  logger.py  utils.py
src/api/: __init__.py  api.py
src/models/: __init__.py  model.py
src/models/ngram/: data.py  model.py
tests/: test_config.py
tests/models/ngram/: test_data.py  test_model.py
