[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Antoine Lefebvre-Brossard <antoinelb@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sanic = "*"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
black = {version = "*",allows-prereleases = true}
flake8 = "*"
flake8-bugbear = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
safety = "*"

[tool.black]
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
